--- a/action.yml
+++ b/action.yml
@@ -48,5 +48,6 @@ runs:
         
     - id: metadata
       uses: actions/github-script@v5.0.0
-      script: |
-        core.setOutput("value", context.runNumber.toString().padStart(4, 0));
+      with:
+        script: |
+          core.setOutput("value", context.runNumber.toString().padStart(4, 0));
